--- a/spec/overrides/partials/footer.html
+++ b/spec/overrides/partials/footer.html
@@ -28,7 +28,7 @@
       <div class="md-footer-copyright">
         <div class="md-footer-copyright__content" style="text-align: right; font-size: 0.7rem; line-height: 1.6;">
           <span>Copyright © WSO2 LLC (2025)</span><br>
-          <span style="font-size: 0.65rem; opacity: 0.8;">Content licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener">CC BY 4.0</a> | Sample code licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener">Apache 2.0</a></span>
+          <span style="font-size: 0.65rem; opacity: 0.8;">Content licensed under <a href="https://creativecommons.org/licenses/by-nd/4.0/" target="_blank" rel="noopener">CC BY-ND 4.0</a> | Sample code licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0" target="_blank" rel="noopener">Apache 2.0</a></span>
         </div>
       </div>
     </div>
