--- a/spec/docs/stylesheets/extra.css
+++ b/spec/docs/stylesheets/extra.css
@@ -242,10 +242,10 @@
 }
 
 .code-demo-container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1.2fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 3rem;
   align-items: center;
 }
@@ -357,7 +357,7 @@
 }
 
 .demo-visualization-image {
-  max-width: 100%;
+  width: auto;
   height: auto;
   display: block;
 }
